--- a/pom.xml
+++ b/pom.xml
@@ -56,23 +56,28 @@
 						</path>
 					</annotationProcessorPaths>
 					<annotationProcessors>
+					<!--
 						<annotationProcessor>org.checkerframework.checker.nullness.NullnessChecker</annotationProcessor>
 						<annotationProcessor>org.checkerframework.checker.optional.OptionalChecker</annotationProcessor>
 						<annotationProcessor>org.checkerframework.checker.regex.RegexChecker</annotationProcessor>
-						<annotationProcessor>org.checkerframework.checker.formatter.FormatterChecker</annotationProcessor>
+						<annotationProcessor>org.checkerframework.checker.formatter.FormatterChecker</annotationProcessor> -->
+						<annotationProcessor>org.checkerframework.common.util.count.AnnotationStatistics</annotationProcessor> 
 					</annotationProcessors>
 					<compilerArgs>
 					 	<arg>-Awarns</arg>
 						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
 						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
-						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>m
 						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
 						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
 						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
 						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
 						<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
 						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+						<arg>-Aannotations</arg>
+						<arg>-Anolocations</arg>
 					</compilerArgs>
+					<showWarnings>true</showWarnings>
 				</configuration>
 			</plugin>
 			<plugin>
